--- a/stucampus/static/styles/bases.css
+++ b/stucampus/static/styles/bases.css
@@ -111,6 +111,9 @@ body{
 	}
 	.sidebar-top{
 	    position: relative;
+	    background-image: url(/static/images/coverphoto/current.jpg);
+	    background-repeat:no-repeat;
+	    background-size: 140%;
 	    width: 21.266667rem;
 	    height: 11.466667rem;
 	}
@@ -237,7 +240,7 @@ body{
 		background: url(/static/images/index/news_48.png);
 		background-size: 100%;
 	}
-	span.copyright{
+	div.copyright{
 		display: block;
 		height: 0.6rem;
 		width: 25rem;
@@ -371,9 +374,9 @@ body{
 	    width: 2.733333rem;
 	    box-shadow: 0 0.2rem 0.1rem rgba(0,0,0,0.23);
 	}
-	span.copyright{
+	div.copyright{
 		display: block;
-		padding: 0 0 1.06667rem 0;
+		padding: 1.06667rem 0 1.06667rem 0;
 		font-size: 0.6rem;
 		color: rgba(0,0,0,0.54);
 		text-align: center;
