--- a/stucampus/templates/lecture/mobile.html
+++ b/stucampus/templates/lecture/mobile.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base2.html' %}
 
 {% block htmltitle %}
 <title>深大校园讲座预告移动版 - 深圳大学学子天地</title>
@@ -9,14 +9,13 @@
     {{ 'lecture/lec_act_mobile.css' | as_css }}
     {{ 'table/table_activity.js' | as_js }}
 {% endblock %}
+{% block templatetitle %}
+深大校园讲座预告
+{% endblock %}
 
-{% block content %}
+{% block main %}
     <!-- 主体  Begin -->
     <div id="main-container">
-        <div class="table-header">
-            <h2>深圳大学校园讲座预告</h2>
-            <p>由学子天地与深大百科联合驱动</p>
-        </div>
         <table>
             <tbody>
                 <tr>
