--- a/stucampus/static/styles/lecture/lec_act_mobile.css
+++ b/stucampus/static/styles/lecture/lec_act_mobile.css
@@ -1,7 +1,7 @@
 #main-container{
     width: 90%;
     position: relative;
-    margin: 0 auto;
+    margin:25px auto 0 auto;
     overflow: auto;
 }
 
@@ -99,4 +99,33 @@ td{
 .day1,.day2,.day3,.day4,.day5,.day6,.day7{
     background-color: #a0d8ef;
     color: #007bbb;
+}
+.template-header{
+    position: relative;
+    top: 0;
+    left: 0;
+    height: 9.8rem;
+    width: 25.0rem;
+    overflow: hidden;
+    background-size: 100%;
+    background-image: url(/static/images/coverphoto/current.jpg);
+}
+.artical-title{
+    position: absolute;
+    top: 2.333333rem;
+    margin: 0 4.4rem;
+    display: block;
+    display: -webkit-box;
+    width: 16.333333rem;
+    height: auto;
+    text-align: center;
+    color: rgba(255,255,255,0.87);
+    font-size: 1.6rem;
+    line-height: 2.4rem;
+    overflow : hidden;
+    text-overflow: ellipsis;
+    -o-text-overflow: ellipsis;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    font-family: "SourceHanSans-Medium","Roboto-Medium","Microsoft YaHei";
 }
