--- a/stucampus/static/styles/lecture/lec_act_show.css
+++ b/stucampus/static/styles/lecture/lec_act_show.css
@@ -1,8 +1,16 @@
 #main-container{
 	width: 90%;
 	position: relative;
-	margin: 0 auto;
+	margin:48px auto 0 auto;
 	overflow: auto;
+}
+.template-main{
+    margin: 0 auto;
+    width: 28.8rem;
+    padding: 0 1.6rem;
+    background-color: #FDFDFD;
+    overflow: hidden;
+    box-shadow: 0rem 0.1rem 0.1rem rgba(0,0,0,0.16);
 }
 
 #main-container a{
@@ -83,4 +91,14 @@ td{
 .day1,.day2,.day3,.day4,.day5,.day6,.day7{
 	background-color: #a0d8ef;
 	color: #007bbb;
+}
+
+.template-header{
+    position: relative;
+    margin:  0 auto;
+    height: 12.5rem;
+    width: 32rem;
+    overflow: hidden;
+    background-size: 100%;
+    background-image: url(/static/images/coverphoto/current.jpg);
 }
