--- a/stucampus/templates/activity/home.html
+++ b/stucampus/templates/activity/home.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base2.html' %}
 
 {% block htmltitle %}
 <title>深大校园活动预告 - 深圳大学学子天地</title>
@@ -10,11 +10,14 @@
     {{ 'table/table_activity.js' | as_js }}
 {% endblock %}
 
-{% block content %}
+{% block templatetitle %}
+深大校园活动预告
+{% endblock %}
+
+{% block main %}
     <!-- 主体  Begin -->
     <div id="main-container">
         <table>
-            <caption>深圳大学校园活动预告</caption>
             <tbody>
                 <tr>
                     <td class="time">时间</td>
