更新深大导航接口

--- a/stucampus/templates/index.html
+++ b/stucampus/templates/index.html
@@ -71,26 +71,26 @@
                 <div class="shadow">
                     <p class="card-title">深大导航</p>
                     <div class="nav-content">
-                        <a href="#">公文通</a>
-                        <a href="#">Blackboard</a>
-                        <a href="#">学生邮箱</a>
-                        <a href="#">校园场地申请</a>
-                        <a href="#">体育场馆订票</a>
+                        <a href="http://www.szu.edu.cn/board/" target="_blank">公文通</a>
+                        <a href="http://elearning.szu.edu.cn/" target="_blank">Blackboard</a>
+                        <a href="https://exmail.qq.com/domain/email.szu.edu.cn" target="_blank">学生邮箱</a>
+                        <a href="http://stu.szu.edu.cn:8080/" target="_blank">校园场地申请</a>
+                        <a href="http://tycg.szu.edu.cn/Home.aspx" target="_blank">体育场馆订票</a>
                     </div>
                     <div class="nav-content">
-                        <a href="#">网络服务</a>
-                        <a href="#">事务中心</a>
-                        <a href="#">公寓管理</a>
-                        <a href="#">图书馆</a>
-                        <a href="#">网上电视</a>
-                        <a href="#">火车订票</a>
+                        <a href="http://www.szu.edu.cn/nc/" target="_blank">网络服务</a>
+                        <a href="http://swzx.szu.edu.cn/" target="_blank">事务中心</a>
+                        <a href="http://gyzx.szu.edu.cn/" target="_blank">公寓管理</a>
+                        <a href="http://www.lib.szu.edu.cn/" target="_blank">图书馆</a>
+                        <a href="http://www.szu.edu.cn/tv/" target="_blank">网上电视</a>
+                        <a href="http://192.168.2.113/" target="_blank">火车订票</a>
                     </div>
                     <div class="nav-content">
-                        <a href="#">教务管理</a>
-                        <a href="#">排课查询</a>
-                        <a href="#">网上选课</a>
-                        <a href="#">绩点查询</a>
-                        <a href="#">联系老师</a>
+                        <a href="http://192.168.2.20/" target="_blank">教务管理</a>
+                        <a href="http://192.168.2.168/paike/selectXYMC_BJMC.asp" target="_blank">排课查询</a>
+                        <a href="http://192.168.240.168/xuanke/edu_login.asp" target="_blank">网上选课</a>
+                        <a href="http://192.168.2.20/axsxx/AASZUstd.ASP" target="_blank">绩点查询</a>
+                        <a href="http://swzx.szu.edu.cn/swzx_view_affair_details.asp?affair_id=14c99c402ddab519" target="_blank">联系老师</a>
                     </div>
                 </div>
             </div>
