--- a/stucampus/templates/base.html
+++ b/stucampus/templates/base.html
@@ -64,10 +64,10 @@
             <div class="autoadapt">
                 <ul class="nav1">
                     <li><a class="nav-active" id="nav0" href="javascript:void(0)" onclick="navcome(0);" tarurl="/"><span class="home"></span>学子首页</a></li>
-                    <li><a id="nav1" href="javascript:void(0)" onclick="navcome(1);" tarurl="{% url 'articles:list' 'photography' %}"><span class="photography"></span>深大摄影</a></li>
-                    <li><a id="nav2" href="javascript:void(0)" onclick="navcome(2);" tarurl="{% url 'articles:list' 'people' %}"><span class="people"></span>深大人物</a></li>
-                    <li><a id="nav3" href="javascript:void(0)" onclick="navcome(3);" tarurl="{% url 'articles:list' 'interesting' %}"><span class="interesting"></span>趣物志</a></li>
-                    <li ><a id="nav4" href="javascript:void(0)" onclick="navcome(4);" tarurl="{% url 'articles:list' 'news' %}"><span class="news"></span>新闻和通知</a></li>
+                    <li><a id="nav1" href="javascript:void(0)" onclick="navcome(1);" tarurl="{% url 'articles:list' 'people' %}"><span class="people"></span>深大人物</a></li>
+                    <li><a id="nav2" href="javascript:void(0)" onclick="navcome(2);" tarurl="{% url 'articles:list' 'interesting' %}"><span class="interesting"></span>趣物志</a></li>
+                    <li ><a id="nav3" href="javascript:void(0)" onclick="navcome(3);" tarurl="{% url 'articles:list' 'news' %}"><span class="news"></span>新闻和通知</a></li>
+                    <li><a id="nav4" href="javascript:void(0)" onclick="navcome(4);" tarurl="http://stu.szu.edu.cn:8080/"><span class="serv"></span>服务专区</a></li>
                     <li class="now"></li>
                 </ul>
             </div>
