--- a/stucampus/templates/ajax_article_list.html
+++ b/stucampus/templates/ajax_article_list.html
@@ -1,6 +1,6 @@
 
 {% load qiniu_tools %}
-{% for article in important_articles %}
+{% for article in newest_articles %}
 <div class="artical">
     <a href="{% url 'articles:display' article.pk %}">
         <img class="a-pic" src="{{ article.cover.url | scale_qiniu_img:request}}">
@@ -20,8 +20,8 @@
     </a>
 </div>
 {% endfor %}
-{% if important_articles.has_next %}
-    <div class="page_number">{{ important_articles.number }}</div>
+{% if newest_articles.has_next %}
+    <div class="page_number">{{ newest_articles.number }}</div>
 {% else %}
     <div class="page_number">没有更多文章了</div>
 {% endif %}
