--- a/stucampus/templates/ajax_article_list.html
+++ b/stucampus/templates/ajax_article_list.html
@@ -3,7 +3,7 @@
 {% for article in newest_articles %}
 <div class="artical">
     <a href="{% url 'articles:display' article.pk %}">
-        <img class="a-pic" src="{{ article.cover.url | scale_qiniu_img:request}}">
+        <img class="a-pic" src="{{ article.cover.name | scale_qiniu_img:request}}">
         <div class="a-content">
             <span class="a-title">{{ article.title | truncatechars:19  }}</span>
             <div class="a-info">
