--- a/stucampus/templates/articles/article-list.html
+++ b/stucampus/templates/articles/article-list.html
@@ -86,6 +86,18 @@
                     </div>
                 </div>
             </div>
+            
+            <div class="side-card">
+                <div class="shadow">
+                    <p class="card-title">栏目频道</p>
+                    <div class="nav-content">
+                        {% for category in categories%}
+                        <a href="{% url 'articles:list' category.english_name %}">{{ category.name }}</a>
+                        {% endfor %} 
+                    </div>
+                </div>
+            </div>
+
             <div class="side-card">
                 <div class="shadow">
                     <p class="card-title">最新评论</p>
