--- a/stucampus/templates/base.html
+++ b/stucampus/templates/base.html
@@ -30,6 +30,18 @@
     {% block htmlhead %}
     {% endblock %}
 </head>
+<!-- 百度统计start -->
+<script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "//hm.baidu.com/hm.js?4d0c962b688eb374c3f0a499db3087a4";
+      var s = document.getElementsByTagName("script")[0]; 
+      s.parentNode.insertBefore(hm, s);
+    })();
+</script>
+<!-- 百度统计end -->
+
 <script type="text/javascript">
     $(function(){
         $("img").each(function() {
@@ -54,7 +66,6 @@
     </div>
 
     <div class="header-nav">
-        <div class="header-secshadow"></div>
         <div class="sidebar-main">
             <div class="sidebar-top">
                 <div class="sidebar-blur"></div>
@@ -83,9 +94,8 @@
     <div class="inner_content">
     {% block content %}
     {% endblock %}
-        <div class="copyright">版权所有 © 2001～2015 深圳大学学子天地 - 粤ICP备05008884号</div>
     </div><!--end of inner_content-->
-
+    <div class="copyright">版权所有 © 2001～2015 深圳大学学子天地 - 粤ICP备05008884号</div>
 </div><!--end of inner_body-->
 
 </body>
