评论框字体大小，还有建议的首页文章卡片显示 作者 · 栏目 · 发表日期

--- a/stucampus/static/styles/articles/duoshuo.css
+++ b/stucampus/static/styles/articles/duoshuo.css
@@ -327,6 +327,9 @@
         height: 3.46667rem;
         border-bottom: 1px solid #5BC5BE;
         resize: none;
+        font-size: 0.6rem;
+        color: rgba(0,0,0,0.54);
+        font-family: "SourceHanSans-Regular","Roboto-Regular","Microsoft YaHei";
     }
     .submit{
         position: absolute;
