继续改阴影

--- a/stucampus/static/styles/articles/article-phone.css
+++ b/stucampus/static/styles/articles/article-phone.css
@@ -124,13 +124,12 @@
     -webkit-transition: transform 0.5s ease-out, -webkit-transform 0.5s ease-out, right 0.5s ease-out, bottom 0.5s ease-out;
     -o-transition: transform 0.5s ease-out, -webkit-transform 0.5s ease-out, right 0.5s ease-out, bottom 0.5s ease-out;
     -moz-transition: transform 0.5s ease-out, -webkit-transform 0.5s ease-out, right 0.5s ease-out, bottom 0.5s ease-out;
-    box-shadow: 0 0.666667rem 0.666667rem rgba(0,0,0,0.19);
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 .fixed-logo img{
     display: block;
     height: 3.3334rem;
     width: 3.3334rem;
-    box-shadow: 0 0.4rem 0.2rem rgba(0,0,0,0.23);
 }
 .btn{
     display: block;
@@ -140,7 +139,7 @@
     width: 2.666667rem;
     border-radius: 50%;
     background-color: rgb(255,255,255);
-    box-shadow: 0 0.2rem 0.2rem rgba(0,0,0,0.16);
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
     z-index: 900;
     transform: scale(0);
     -webkit-transform: scale(0);
