--- a/stucampus/static/styles/bases.css
+++ b/stucampus/static/styles/bases.css
@@ -85,7 +85,7 @@ body{
 	    -webkit-transition: transform 0.5s ease-out,opacity 0.5s ease-out;
 	    -o-transition: transform 0.5s ease-out,opacity 0.5s ease-out;
 	    -moz-transition: transform 0.5s ease-out,opacity 0.5s ease-out;
-	    box-shadow: 0 0.666667rem 0.666667rem rgba(0,0,0,0.19);
+	    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 	}
 	.fixed-logo img{
 	    display: block;
