隐藏评论框,修复评论调出分享消失错误

--- a/stucampus/static/styles/articles/duoshuo.css
+++ b/stucampus/static/styles/articles/duoshuo.css
@@ -168,6 +168,7 @@
         height: 3.46667rem;
         border-bottom: 1px solid #5BC5BE;
         resize: none;
+        outline:medium;
     }
     .submit{
         position: absolute;
@@ -327,6 +328,7 @@
         height: 3.46667rem;
         border-bottom: 1px solid #5BC5BE;
         resize: none;
+        outline:medium;
         font-size: 0.6rem;
         color: rgba(0,0,0,0.54);
         font-family: "SourceHanSans-Regular","Roboto-Regular","Microsoft YaHei";
